# llm-spam-benchmark

./: README.md  pyproject.toml
data/: batch_gpt5_fail_output.jsonl  batch_list.txt  dataset_info.md  errors_all_models.csv  gpt5mini_explain_comparison.csv  gpt5mini_explain_detailed.csv  gpt5nano_errors.csv  model_error_analysis.csv  multi_model_errors.csv  multi_model_errors_3.csv  multi_model_errors_5.csv  multi_model_errors_7.csv  reasoning-3errors.csv  smsspam_dataset.csv  smsspam_shuffled.csv
data/batches/: batch_input_gpt-4.1-mini.jsonl  batch_input_gpt-4.1.jsonl  batch_input_gpt-4o-mini.jsonl  batch_input_gpt-4o.jsonl  batch_input_gpt-5-mini.jsonl  batch_input_gpt-5-nano.jsonl  batch_input_gpt-5-pro.jsonl  batch_input_gpt-5-pro_part1.jsonl  batch_input_gpt-5-pro_part2.jsonl  batch_input_gpt-5-pro_part3.jsonl  batch_input_gpt-5-pro_part4.jsonl  batch_input_gpt-5.jsonl  batch_input_o1-mini.jsonl
data/batches_explain/: batch_input_gpt-5-mini_3errors_explain.jsonl  batch_input_gpt-5-mini_explain.jsonl  batch_input_gpt-5-nano_explain.jsonl
data/gpt-5-mini-3errors-explain/: predictions.csv  (+1 more)
notebooks/: evaluate_models.ipynb
src/: audit_report.py  check_batch.py  config.py  create_all_batches.py  create_batch_explain.py  create_batch_input.py  create_split_batches.py  llm_utils.py  merge_errors_with_reasoning.py  multi_model_errors.py  multi_model_errors_split.py  parse_batch_output.py  parse_explain_batch_output.py  parse_multiple_batches.py  preprocess.py  run_all_batches.py  run_batch.py  submit_batch_explain.py  submit_batch_single.py
(+13 files in other folders)
